--- a/SUFRIMIENTO.html
+++ b/SUFRIMIENTO.html
@@ -14,5 +14,5 @@
         <li> estas la mayor parte del dia encorvado </li>
         <li> tenes que agacharte para entender lo que dicen las personas </li>
         </ol>
-        <img src="/home/alumno/Imágenes/sasas.jpg" alt="foto">
+        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.elconfidencial.com%2Falma-corazon-vida%2F2017-03-09%2Fdolor-de-espalda-causado-por-otra-dolencia-mas-grave_1343231%2F&psig=AOvVaw2SIDokygGG5W7_1XXZaHLo&ust=1650566682386000&source=images&cd=vfe&ved=0CAkQjRxqFwoTCKig55umo_cCFQAAAAAdAAAAABAD" alt="foto">
         
